<resources>
    <string name="app_name">fitness</string>
    <string name="welcome">Welcome!</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="by_pressing_submit_you_agree_to_our">By pressing submit you agree to our</string>
    <string name="age">Age:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="diet">Diet</string>
    <string name="newest_diet">Newest Diet</string>
    <string name="see_all">see all</string>
    <string name="fitness">Fitness</string>
    <string name="healthy_life">Healthy Life</string>
    <string name="send_to">Send</string>
    <string name="the_most_popular_diets">The most popular diets</string>
    <string name="exercise">Exercise</string>
    <string name="diet_favorite">Diet Favorite</string>
    <string name="exercise_favorite">Exercise Favorite</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="please_make_sure_your_internet_connection">Please make sure your internet connection !!!</string>
    <string name="newest_exercise">Newest Exercise</string>
    <string name="popular_exercise">The most popular exercise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_favorites">Latest Favorites</string>
    <string name="description_diet">Limited based on 5 favorites latest , To view the full list of favorites, tab all favorite diet</string>
    <string name="description_fav">Show all diet favorite</string>
    <string name="description_exe">Show all exercise favorite</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="suggested_for_you">Suggested for you</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="user_details">User details</string>
    <string name="favorite_list">Favorite list :</string>
    <string name="followed">Followed</string>
    <string name="following_description">Show all following</string>
    <string name="sing_out">Sing out</string>
    <string name="comment_diet">You have no items to display , Please go to the diet page and add the favorite item , or click on this text and go to the diet page</string>
    <string name="exercise_diet">You have no items to display , Please go to the exercise page and add the favorite item ,or click on this text and go to the exercise page </string>
    <string name="no_height">No height</string>
    <string name="no_weight">No Weight</string>
    <string name="no_age">No Age</string>
    <string name="no_gender">No Gender</string>
    <string name="no_following">You have no items to display , Please go to the search page and add the following item , or click on this text and go to the search page</string>
    <string name="display">This user has no items to display</string>
    <!-- TODO: Toast and fragment string -->
    <string name="internet">Internet error</string>
    <string name="successfully_followed">Successfully followed</string>
    <string name="error">You have already followed this user</string>
    <string name="bad_request">You can not follow yourself</string>
    <string name="successfully_removed">Successfully removed</string>
    <string name="try_again">Error, Please try again later</string>
    <string name="successfully">Updated successfully</string>
    <string name="error_update">Server error</string>
    <string name="login_account">Please login into your account</string>
    <string name="not_available"> User not available or Wrong username or password, Please register</string>
    <string name="is_username">This username is available</string>
    <string name="enter_weight">Please Enter Weight</string>
    <string name="enter_height">Please Enter Height</string>
    <string name="enter_date_of_birth">Please Enter Date of birth</string>
    <string name="enter_gender">Please Select Gender</string>
    <string name="enter_description">Please Enter Description</string>
    <string name="enter_username">Please Enter Username</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="valid_email">Please Enter Valid Email</string>
    <string name="no_diet">You have no items to display , Please go to the diet page and add the favorite item , or click on Show all diet favorite text and go to the diet page</string>
    <string name="no_exercise">You have no items to display , Please go to the exercise page and add the favorite item ,or click on Show all exercise favorite text and go to the exercise page </string>
    <string name="call_your_following">Call your Following</string>
    <string name="enter_your_secret_key">enter your secret key</string>
    <string name="video_call">Video call</string>
    <string name="voice_call">Voice call</string>
    <string name="video_call_in_window">Video call in window</string>
    <string name="call">Call</string>
    <string name="missing_call">missing call code</string>
    <string name="invalid_call">invalid call code</string>
    <string name="missing_client">missing client id</string>
    <string name="init_offline"> your following offline</string>
    <string name="line_busy"> line or following busy</string>
</resources>