<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".view.fragment.FavoriteFragment">

        <com.scwang.wave.MultiWaveHeader
            android:id="@+id/waveHeader"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:mwhCloseColor="@color/dark_violet"
            app:mwhColorAlpha="0.45"
            app:mwhGradientAngle="45"
            app:mwhProgress="1"
            app:mwhStartColor="@color/bright_purple"
            app:mwhVelocity="1"
            app:mwhWaveHeight="70dp"
            app:mwhWaves="MultiWave" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/app_name"
            android:rotation="180"
            android:scaleType="fitXY"
            android:src="@drawable/right" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/diet_favorite"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/waveHeader"
            android:layout_margin="10dp"
            android:text="@string/description_fav"
            android:textColor="@color/dark_violet"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/no_diet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:lineSpacingExtra="20dp"
            android:padding="20dp"
            android:visibility="gone"
            android:text="@string/no_diet"
            android:textAlignment="center"
            android:textColor="@color/dark_violet"
            android:textSize="17sp"
            android:layout_below="@+id/Description"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerViewShowFavorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Description"
            android:layout_margin="8dp"
            tools:listitem="@layout/itemsfavorite" />
    </RelativeLayout>

</layout>