<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.example.fitness.model.ModelShowAllUser" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:padding="8dp"
                android:src="@mipmap/ic_launcher_round" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="15dp"
                    android:text="@{data.username}"
                    android:textColor="@color/dark_violet"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/username" />


                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user"
                    android:layout_gravity="start"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/dark_violet"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/gender" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="8dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/text_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/gradient_btn"
                    android:padding="10dp"
                    android:text="@string/follow"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/ic_ok"
                    android:text="@string/follow"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>