<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.example.fitness.model.ModelShowAllUser" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:padding="8dp"
                android:src="@mipmap/ic_launcher_round" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="15dp"
                    android:text="@{data.username}"
                    android:textColor="@color/dark_violet"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/username" />


                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user"
                    android:layout_gravity="start"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/dark_violet"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/gender" />

                <Button
                    android:id="@+id/call"
                    style="@style/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gender"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/call"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </RelativeLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>