<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true"
        tools:context=".view.fragment.SearchFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:background="@color/bright_purple">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/app_name"
                        android:rotation="180"
                        android:scaleType="fitXY"
                        android:src="@drawable/right" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="100dp"
                        android:text="@string/explore"
                        android:textColor="#FFF"
                        android:textSize="32sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/suggested_for_you"
                    android:textColor="@color/dark_violet"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RecyclerViewSuggested"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="3"
                    tools:listitem="@layout/search_recycler2" />


            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>